:bug: avoiding line breaks in eyeGuide footer

--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ input[type="submit"]:hover, input::file-selector-button:hover {
 
 
 .floating-footer {
+    width: 100%;
     position: absolute;
     bottom: 0.5em;
     left: 50%;
